@@ -2,7 +2,7 @@
 
 import os, sys
 
-from coverage.execfile import run_python_file
+from coverage.execfile import run_python_file, run_python_module
 from coverage.misc import NoSource
 
 sys.path.insert(0, os.path.split(__file__)[0]) # Force relative import for Py3k
@@ -10,7 +10,7 @@ from coveragetest import CoverageTest
 
 here = os.path.dirname(__file__)
 
-class RunTest(CoverageTest):
+class RunFileTest(CoverageTest):
     """Test cases for `run_python_file`."""
 
     def test_run_python_file(self):
@@ -76,3 +76,42 @@ class RunTest(CoverageTest):
 
     def test_no_such_file(self):
         self.assertRaises(NoSource, run_python_file, "xyzzy.py", [])
+
+
+class RunModuleTest(CoverageTest):
+    """Test run_python_module."""
+
+    run_in_temp_dir = False
+
+    def setUp(self):
+        super(RunModuleTest, self).setUp()
+        # Parent class saves and restores sys.path, we can just modify it.
+        sys.path.append(self.nice_file(os.path.dirname(__file__), 'modules'))
+
+    def test_runmod1(self):
+        run_python_module("runmod1", ["runmod1", "hello"])
+        self.assertEqual(self.stdout(), "runmod1: passed hello\n")
+
+    def test_runmod2(self):
+        run_python_module("pkg1.runmod2", ["runmod2", "hello"])
+        self.assertEqual(self.stdout(), "runmod2: passed hello\n")
+
+    def test_runmod3(self):
+        run_python_module("pkg1.sub.runmod3", ["runmod3", "hello"])
+        self.assertEqual(self.stdout(), "runmod3: passed hello\n")
+
+    def test_pkg1_main(self):
+        run_python_module("pkg1", ["pkg1", "hello"])
+        self.assertEqual(self.stdout(), "pkg1.__main__: passed hello\n")
+
+    def test_pkg1_sub_main(self):
+        run_python_module("pkg1.sub", ["pkg1.sub", "hello"])
+        self.assertEqual(self.stdout(), "pkg1.sub.__main__: passed hello\n")
+
+    def test_no_such_module(self):
+        self.assertRaises(NoSource, run_python_module, "i_dont_exist", [])
+        self.assertRaises(NoSource, run_python_module, "i.dont_exist", [])
+        self.assertRaises(NoSource, run_python_module, "i.dont.exist", [])
+
+    def test_no_main(self):
+        self.assertRaises(NoSource, run_python_module, "pkg2", ["pkg2", "hi"])
