@@ -11,6 +11,9 @@ Version 3.5
   On a file page, ``r``, ``m``, ``x``, and ``p`` toggle the run, missing,
   excluded, and partial line markings.
 
+- Modules can now be run directly using ``coverage run -m modulename``, to
+  mirror Python's ``-m`` flag.  Closes `issue 95_`, thanks, Brandon Rhodes.
+
 - A little bit of Jython support: `coverage run` can now measure Jython
   execution by adapting when $py.class files are traced. Thanks, Adi Roiban.
 
@@ -27,6 +30,7 @@ Version 3.5
   Brett Cannon.
 
 .. _issue 93: http://bitbucket.org/ned/coveragepy/issue/93/copying-a-mock-object-breaks-coverage
+.. _issue 95: https://bitbucket.org/ned/coveragepy/issue/95/run-subcommand-should-take-a-module-name
 .. _issue 104: https://bitbucket.org/ned/coveragepy/issue/104/explicitly-close-files
 .. _issue 107: https://bitbucket.org/ned/coveragepy/issue/107/codeparser-not-opening-source-files-with
 
